Terraform/Azure/Jenkins/public_ip.tf
resource "azurerm_public_ip" "jenkins_ip" {
  name                = "jenkins-vm-ip"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
  allocation_method   = "Static"
  sku                 = "Basic"
}
