Terraform/Azure/Jenkins/vnet.tf
resource "azurerm_virtual_network" "vnet" {
  name                = "azure-vnet"
  address_space       = [var.vnet_cidr]
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
}
